[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-learning-volatility"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "loguru>=0.7.3", 
]

[project.scripts]
dl-vol = "dl_vol.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dl_vol"]
